Changing query div display to inline to avoid glitches with whitespace

--- a/src/icap_frontend/assets/main.css
+++ b/src/icap_frontend/assets/main.css
@@ -43,10 +43,7 @@ button[type="submit"] {
   font-size: 12px;
   overflow: auto;
   line-height: 1.5;
-  display: flex;
-  flex-flow: row wrap;
-  align-content: space-between;
-  justify-content: space-between;
+  display: inline;
 }
 
 #query pre {
